splash-box specifiicty was too high, fixed
splash-box being an id made modifying anything involving width a pain
due to a single style selector (#splash-box *)

working around it was fine but it dictated that any width modification
for descendant elements needed to have a higher specificity to override
it, causing them all to require ids themselves.

basically this should free up my design decisions.

Also this sort of exposed that there's multiple files referring to
specific class/id attributes, which seems problematic

--- a/app/assets/stylesheets/splash/splash_form.scss
+++ b/app/assets/stylesheets/splash/splash_form.scss
@@ -4,7 +4,7 @@
     position: relative;
 }
 
-#splash-box .logo-char {
+.splash-box .logo-char {
     font-size: 60px;
 }
 
