--- a/app/assets/stylesheets/splash/splash_pane.scss
+++ b/app/assets/stylesheets/splash/splash_pane.scss
@@ -76,11 +76,11 @@ a,button {
     text-align: left;
 }
 
-#splash-box {
+.splash-box {
     width: 300px;
 }
 
-#splash-box * {
+.splash-box * {
     width: 100%;
 }
 
